fixed errors and bugs
